# Graphex

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/: cinder_app_main.cc
data/: PROPOSAL.md  README.md
include/core/: camera.h  function_handler.h  particle.h
include/visualizer/: curve_handler.h  graph_handler.h  particle_manager.h  shader.h  vector_field_simulator.h
src/core/: camera.cc  function_handler.cc  particle.cc
src/visualizer/: curve_handler.cc  graph_handler.cc  particle_manager.cc  shader.cc  shader.fs  shader.vs  vector_field_simulator.cc
